<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:scrollbars="vertical">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_info"
            style="@style/DCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen16"
                    android:layout_marginTop="@dimen/dimen16"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        style="@style/RadioStyle"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        style="@style/RadioStyle"
                        android:text="@string/female" />

                </RadioGroup>

                <CheckBox
                    android:id="@+id/chk_age16"
                    style="@style/CheckBoxStyle"
                    android:text="@string/is_your_age_is_below_16" />

                <CheckBox
                    android:id="@+id/chk_migranies"
                    style="@style/CheckBoxStyle"
                    android:text="@string/do_you_have_migraines" />

                <CheckBox
                    android:id="@+id/chk_drugs"
                    style="@style/CheckBoxStyle"
                    android:text="@string/are_you_taking_any_hallucinogenic_drugs" />

                <Button
                    android:id="@+id/btn_chk_tos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen16"
                    android:layout_marginLeft="@dimen/dimen8"
                    android:layout_marginRight="@dimen/dimen8"
                    android:layout_marginTop="@dimen/dimen24"
                    android:background="@color/colorPrimary"
                    android:text="@string/check_t_odd_s_syndrome"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/body" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_result"
            style="@style/DCardView"
            android:layout_below="@+id/cv_info"
            android:layout_marginTop="@dimen/dimen16"
            android:visibility="gone"
            app:contentPaddingBottom="@dimen/dimen16"
            app:contentPaddingTop="@dimen/dimen16">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/subHeading" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_heading_checkup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_result"
            android:layout_marginTop="@dimen/dimen24"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="@dimen/dimen8"
            android:text="@string/checkup_history"
            android:textSize="@dimen/subHeading"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_heading_checkup"
            android:scrollbars="vertical" />
    </RelativeLayout>
</ScrollView>